<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/scrollView"
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_weight="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

		<LinearLayout android:focusable="true"
			android:focusableInTouchMode="true" 
			android:layout_width="0px"
			android:layout_height="0px" >
			<requestFocus />
		</LinearLayout>

		<TableLayout
		    android:id="@+id/addEditProfileTableLayout"
		    android:stretchColumns="1"
		    android:shrinkColumns="1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android1:paddingLeft="10dp"
		    android1:paddingRight="10dp" >
		
		    <TextView
		        android1:id="@+id/generalHeader"
		        android1:layout_width="match_parent"
		        android1:layout_height="wrap_content"
		        android1:text="@string/general"
		        android1:textAppearance="?android:attr/textAppearanceLarge"
		        style="?android:attr/listSeparatorTextViewStyle" />
		
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:padding="5dip" >
		
		        <TextView
		            android1:id="@+id/nameLabelView"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
			        android:textSize="18sp"
		            android1:text="@string/name" />
		
		        <EditText
		            android1:id="@+id/nameView"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
			        android:textSize="12sp"
			        android:inputType="textNoSuggestions" />

		    </TableRow>
		
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android1:gravity="center_vertical"
		        android1:padding="5dp" >
		
		        <TextView
		            android1:id="@+id/infoLabelView"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
			        android:textSize="18sp"
		            android1:text="@string/info" />
		
		        <TextView
		            android1:id="@+id/infoFileView"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
		            android:textSize="12sp" />

		    </TableRow>
		
		    <TextView
		        android1:id="@+id/romHeader"
		        style="?android:attr/listSeparatorTextViewStyle"
		        android1:layout_width="match_parent"
		        android1:layout_height="wrap_content"
		        android1:text="@string/rom"
		        android1:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:padding="5dip"
		        android1:gravity="center_vertical" >
		
		        <TextView
		            android1:id="@+id/romALabelView"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
			        android:textSize="18sp"
		            android1:text="@string/romA" />
		
		        <TextView
		            android1:id="@+id/romAFileView"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
		            android:textSize="12sp" />

		        <ImageButton
		            android1:id="@+id/romABrowseButton"
		            android1:src="@drawable/browse"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
		            android:onClick="handleBrowseRomA" />
		
		    </TableRow>
		
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:padding="5dip"
		        android1:gravity="center_vertical" >
		
		        <TextView
		            android1:id="@+id/romBLabelView"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
			        android:textSize="18sp"
		            android1:text="@string/romB" />
		
		        <TextView
		            android1:id="@+id/romBFileView"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
		            android:textSize="12sp" />

		        <ImageButton
		            android1:id="@+id/romBBrowseButton"
		            android1:src="@drawable/browse"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
		            android:onClick="handleBrowseRomB" />
		
		    </TableRow>
		
		    <TextView
		        android1:id="@+id/disksHeader"
		        android1:layout_width="match_parent"
		        android1:layout_height="wrap_content"
		        android1:text="@string/disk"
		        android1:textAppearance="?android:attr/textAppearanceLarge"
		        style="?android:attr/listSeparatorTextViewStyle" />
		
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:padding="5dip"
		        android1:gravity="center_vertical" >
		
		        <TextView
		            android1:id="@+id/diskALabelView"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
			        android:textSize="18sp"
		            android1:text="@string/diskA" />
		
		        <TextView
		            android1:id="@+id/diskAFileView"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
		            android:textSize="12sp" />

		        <ImageButton
		            android1:id="@+id/diskABrowseButton"
		            android1:src="@drawable/browse"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
		            android:onClick="handleBrowseDiskA" />
		    </TableRow>
		
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:padding="5dip"
		        android1:gravity="center_vertical" >
		
		        <TextView
		            android1:id="@+id/diskBLabelView"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
			        android:textSize="18sp"
		            android1:text="@string/diskB" />

		        <TextView
		            android1:id="@+id/diskBFileView"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
		            android:textSize="12sp" />

		        <ImageButton
		            android1:id="@+id/diskBBrowseButton"
		            android1:src="@drawable/browse"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
		            android:onClick="handleBrowseDiskB" />
		    </TableRow>
		
		    <TextView
		        android1:id="@+id/tapeHeader"
		        android1:layout_width="match_parent"
		        android1:layout_height="wrap_content"
		        android1:text="@string/tape"
		        android1:textAppearance="?android:attr/textAppearanceLarge"
		        style="?android:attr/listSeparatorTextViewStyle" />
		
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:padding="5dip"
		        android1:gravity="center_vertical" >
		
		        <TextView
		            android1:id="@+id/tapeLabelView"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
			        android:textSize="18sp"
		            android1:text="@string/tape" />
		
		        <TextView
		            android1:id="@+id/tapeFileView"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
		            android:textSize="12sp" />

		        <ImageButton
		            android1:id="@+id/tapeBrowseButton"
		            android1:src="@drawable/browse"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
		            android:onClick="handleBrowseTape" />
		    </TableRow>
		
		    <TextView
		        android1:id="@+id/harddiskHeader"
		        android1:layout_width="match_parent"
		        android1:layout_height="wrap_content"
		        android1:text="@string/harddisk"
		        android1:textAppearance="?android:attr/textAppearanceLarge"
		        style="?android:attr/listSeparatorTextViewStyle" />
		
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:padding="5dip"
		        android1:gravity="center_vertical" >
		
		        <TextView
		            android1:id="@+id/harddiskLabelView"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
			        android:textSize="18sp"
		            android1:text="@string/harddisk" />
		
		        <TextView
		            android1:id="@+id/harddiskFileView"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
		            android:textSize="12sp" />
		
		        <ImageButton
		            android1:id="@+id/harddiskBrowseButton"
		            android1:src="@drawable/browse"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
		            android:onClick="handleBrowseHarddisk" />
		    </TableRow>
		
		    <TextView
		        android1:id="@+id/laserdiscHeader"
		        android1:layout_width="match_parent"
		        android1:layout_height="wrap_content"
		        android1:text="@string/laserdisc"
		        android1:textAppearance="?android:attr/textAppearanceLarge"
		        style="?android:attr/listSeparatorTextViewStyle" />
		
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:padding="5dip"
		        android1:gravity="center_vertical" >
		
		        <TextView
		            android1:id="@+id/laserdiscLabelView"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
			        android:textSize="18sp"
		            android1:text="@string/laserdisc" />
		
		        <TextView
		            android1:id="@+id/laserdiscFileView"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
		            android:textSize="12sp" />
		
		        <ImageButton
		            android1:id="@+id/laserdiscBrowseButton"
		            android1:src="@drawable/browse"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
		            android:onClick="handleBrowseLaserdisc" />
		    </TableRow>
		
		    <TextView
		        android1:id="@+id/scriptHeader"
		        android1:layout_width="match_parent"
		        android1:layout_height="wrap_content"
		        android1:text="@string/script"
		        android1:textAppearance="?android:attr/textAppearanceLarge"
		        style="?android:attr/listSeparatorTextViewStyle" />
		    
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:padding="5dip"
		        android1:gravity="center_vertical" >
		
		        <TextView
		            android1:id="@+id/scriptLabelView"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
			        android:textSize="18sp"
		            android1:text="@string/script" />
		
		        <TextView
		            android1:id="@+id/scriptFileView"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
		            android:textSize="12sp" />
		
		        <ImageButton
		            android1:id="@+id/scriptBrowseButton"
		            android1:src="@drawable/browse"
		            android1:layout_width="wrap_content"
		            android1:layout_height="wrap_content"
		            android:onClick="handleBrowseScript" />
		    </TableRow>
		
		</TableLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal" >
	
	        <Button
	            android:id="@+id/cancelButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/cancel"
	            android:onClick="handleCancel" />
	
	        <Button
	            android:id="@+id/addEditButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/save"
	            android:onClick="handleEdit" />
	
	    </LinearLayout>		

	</LinearLayout>

</ScrollView>